@@ -14,6 +14,8 @@ Release 0.4-0 (//):
   * Fix Windows encoding problem.
   * Fix help() and dev.off() when client() or server() is not on.
   * Kill client when 3 consecutive C-c's detected.
+  * Add inwhileloop().
+  * Fix Rstudio help().
 
 Release 0.3-2 (4/28/2016):
   * Minor internal cleanup.
